--- a/style.css
+++ b/style.css
@@ -12,11 +12,26 @@ p {
   justify-content: center;
 }*/
 
+*{
+  border: 1px solid black;
+}
+
 .field {
   display: inline-block;
-  border: 2px solid black;
+  border: 1px solid black;
   width: 15px;
   height: 15px;
+  margin: 5px;
+}
+
+.field:nth-of-type(13) {
+  border: 2px solid red;
+  font-weight: 800;
+}
+
+.field:nth-of-type(20) {
+  border: 2px solid yellow;
+  font-weight: 800;
 }
 
 #board {
